[package]
name = "fbot_vss_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
fbot_rust_client = { git = "https://github.com/vsssfbot/fbot_rust_client" }

flo_curves = "0.1.0"
plotlib = "0.5.1"


[build-dependencies]
prost-build = "0.10.4"