[package]
name = "fbot_vss_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
fbot_rust_client = { version = "0.2.0", git = "https://github.com/vsssfbot/fbot_rust_client" }

# flo_curves = "0.1.0"
# plotlib = "0.5.1"
lazy_static = "1.4.0"