[package]
name = "fbot_vss_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
vsss_rust_client = { version = "0.6.2", git = "https://github.com/fbot-furg/vsss_client_rust.git" }
serialport = "4.2.0"
plotters = "^0.3.1"
clap = { version = "4.0.27", features = ["derive"] }
lazy_static = "1.4.0"

# flo_curves = "0.1.0"
# plotlib = "0.5.1"